// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetHttpService healthy state /get-asset returns asset info for existing asset id 1`] = `
Object {
  "assetId": "50fdcdbfa3154db86a87e4b5697ae30d272e0bbcfa8122efd3e301cb6d616361726f6e2d63616b65",
  "fingerprint": "asset1f0azzptnr8dghzjh7egqvdjmt33e3lz5uy59th",
  "mintOrBurnCount": 1,
  "name": "6d616361726f6e2d63616b65",
  "policyId": "50fdcdbfa3154db86a87e4b5697ae30d272e0bbcfa8122efd3e301cb",
  "quantity": 1n,
}
`;

exports[`AssetHttpService healthy state /get-asset returns asset info with extra data when requested 1`] = `
Object {
  "assetId": "50fdcdbfa3154db86a87e4b5697ae30d272e0bbcfa8122efd3e301cb6d616361726f6e2d63616b65",
  "fingerprint": "asset1f0azzptnr8dghzjh7egqvdjmt33e3lz5uy59th",
  "history": Array [
    Object {
      "quantity": 1n,
      "transactionId": "f66791a0354c43d8c5a93671eb96d94633e3419f3ccbb0a00c00a152d3b6ca06",
    },
  ],
  "mintOrBurnCount": 1,
  "name": "6d616361726f6e2d63616b65",
  "nftMetadata": Object {
    "description": Array [
      "This is my first NFT of the macaron cake",
    ],
    "files": undefined,
    "image": Array [
      "ipfs://QmcDAmZubQig7tGUgEwbWcgdvz4Aoa2EiRZyFoX3fXTVmr",
    ],
    "mediaType": undefined,
    "name": "macaron cake token",
    "otherProperties": Map {
      "id" => 1n,
    },
    "version": "1.0",
  },
  "policyId": "50fdcdbfa3154db86a87e4b5697ae30d272e0bbcfa8122efd3e301cb",
  "quantity": 1n,
  "tokenMetadata": Object {
    "desc": "This is my first NFT of the macaron cake",
    "name": "macaron cake token",
  },
}
`;
